--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,58 +1,210 @@
 /* https://github.com/antfu/prism-theme-vars */
-@import 'prism-theme-vars/base.css';
+/* @import 'prism-theme-vars/base.css'; */
 
+html.dark .prose :where(pre,code):not(.not-prose){
+background:#1c1c31!important
+}
 .prose {
   --prism-font-family: 'DM Mono', monospace;
+ max-width:100ch!important;
 }
 
 .prose img {
   width: 100%;
 }
+/**
+ * Shades of Purple Theme for Prism.js
+ *
+ * @author Ahmad Awais <https://twitter.com/MrAhmadAwais/>
+ * @support Follow/tweet at https://twitter.com/MrAhmadAwais/
+ */
 
-html:not(.dark) .prose {
-  --prism-foreground: #393a34;
-  --prism-background: #fbfbfb;
-  --prism-comment: #a0ada0;
-  --prism-string: #b56959;
-  --prism-literal: #2f8a89;
-  --prism-number: #296aa3;
-  --prism-keyword: #1c6b48;
-  --prism-function: #6c7834;
-  --prism-boolean: #1c6b48;
-  --prism-constant: #a65e2b;
-  --prism-deleted: #a14f55;
-  --prism-class: #2993a3;
-  --prism-builtin: #ab5959;
-  --prism-property: #b58451;
-  --prism-namespace: #b05a78;
-  --prism-punctuation: #8e8f8b;
-  --prism-decorator: #bd8f8f;
-  --prism-regex: #ab5e3f;
-  --prism-json-property: #698c96;
-}
-
-html.dark .prose {
-  --prism-foreground: #d4cfbf;
-  --prism-background: #151515;
-  --prism-comment: #758575;
-  --prism-string: #d48372;
-  --prism-literal: #429988;
-  --prism-keyword: #4d9375;
-  --prism-boolean: #1c6b48;
-  --prism-number: #6394bf;
-  --prism-variable: #c2b36e;
-  --prism-function: #a1b567;
-  --prism-deleted: #a14f55;
-  --prism-class: #54b1bf;
-  --prism-builtin: #e0a569;
-  --prism-property: #dd8e6e;
-  --prism-namespace: #db889a;
-  --prism-punctuation: #858585;
-  --prism-decorator: #bd8f8f;
-  --prism-regex: #ab5e3f;
-  --prism-json-property: #6b8b9e;
-  --prism-line-number: #888888;
-  --prism-line-number-gutter: #eeeeee;
-  --prism-line-highlight-background: #444444;
-  --prism-selection-background: #444444;
-}
+ code[class*='language-'],
+ pre[class*='language-'] {
+   color: #9efeff;
+   direction: ltr;
+   text-align: left;
+   white-space: pre;
+   word-spacing: normal;
+   word-break: normal;
+ 
+   -moz-tab-size: 4;
+   -o-tab-size: 4;
+   tab-size: 4;
+ 
+   -webkit-hyphens: none;
+   -moz-hyphens: none;
+   -ms-hyphens: none;
+   hyphens: none;
+ 
+   font-family: 'Operator Mono', 'Fira Code', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+   font-weight: 400;
+   font-size: 17px;
+   line-height: 25px;
+   letter-spacing: 0.5px;
+   text-shadow: 0 1px #222245;
+ }
+ 
+ pre[class*='language-']::-moz-selection,
+ pre[class*='language-'] ::-moz-selection,
+ code[class*='language-']::-moz-selection,
+ code[class*='language-'] ::-moz-selection,
+ pre[class*='language-']::selection,
+ pre[class*='language-'] ::selection,
+ code[class*='language-']::selection,
+ code[class*='language-'] ::selection {
+   color: inherit;
+   background: #a599e9;
+ }
+ 
+ /* Code blocks. */
+ pre[class*='language-'] {
+   padding: 2em;
+   margin: 0.5em 0;
+   overflow: auto;
+ }
+ 
+ :not(pre) > code[class*='language-'],
+ pre[class*='language-'] {
+   background: #1e1e3f;
+ }
+ 
+ /* Inline code */
+ :not(pre) > code[class*='language-'] {
+   padding: 0.1em;
+   border-radius: 0.3em;
+ }
+ 
+ .token {
+   font-weight: 400;
+ }
+ 
+ .token.comment,
+ .token.prolog,
+ .token.cdata {
+   color: #b362ff;
+ }
+ 
+ .token.delimiter,
+ .token.keyword,
+ .token.selector,
+ .token.important,
+ .token.atrule {
+   color: #ff9d00;
+ }
+ 
+ .token.operator,
+ .token.attr-name {
+   color: rgb(255, 180, 84);
+ }
+ 
+ .token.punctuation {
+   color: #ffffff;
+ }
+ 
+ .token.boolean {
+   color: rgb(255, 98, 140);
+ }
+ 
+ .token.tag,
+ .token.tag .punctuation,
+ .token.doctype,
+ .token.builtin {
+   color: rgb(255, 157, 0);
+ }
+ 
+ .token.entity,
+ .token.symbol {
+   color: #6897bb;
+ }
+ 
+ .token.number {
+   color: #ff628c;
+ }
+ 
+ .token.property,
+ .token.constant,
+ .token.variable {
+   color: #ff628c;
+ }
+ 
+ .token.string,
+ .token.char {
+   color: #a5ff90;
+ }
+ 
+ .token.attr-value,
+ .token.attr-value .punctuation {
+   color: #a5c261;
+ }
+ 
+ .token.attr-value .punctuation:first-child {
+   color: #a9b7c6;
+ }
+ 
+ .token.url {
+   color: #287bde;
+   text-decoration: underline;
+ }
+ 
+ .token.function {
+   color: rgb(250, 208, 0);
+ }
+ 
+ .token.regex {
+   background: #364135;
+ }
+ 
+ .token.bold {
+   font-weight: bold;
+ }
+ 
+ .token.italic {
+   font-style: italic;
+ }
+ 
+ .token.inserted {
+   background: #00ff00;
+ }
+ 
+ .token.deleted {
+   background: #ff000d;
+ }
+ 
+ code.language-css .token.property,
+ code.language-css .token.property + .token.punctuation {
+   color: #a9b7c6;
+ }
+ 
+ code.language-css .token.id {
+   color: #ffc66d;
+ }
+ 
+ code.language-css .token.selector > .token.class,
+ code.language-css .token.selector > .token.attribute,
+ code.language-css .token.selector > .token.pseudo-class,
+ code.language-css .token.selector > .token.pseudo-element {
+   color: #ffc66d;
+ }
+ 
+ .token.class-name {
+   color: #fb94ff;
+ }
+ 
+ .token.operator,
+ .token.entity,
+ .token.url,
+ .language-css .token.string,
+ .style .token.string {
+   background: none;
+ }
+ 
+ .line-highlight.line-highlight {
+   margin-top: 36px;
+   background: linear-gradient(to right, rgba(179, 98, 255, 0.17), transparent);
+ }
+ 
+ .line-highlight.line-highlight:before,
+ .line-highlight.line-highlight[data-end]:after {
+   content: '';
+ }
