--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -89,33 +89,33 @@ margin-bottom:40px;
 ********************
 *******************/
 
-.primary {
+.primary:not(.outlined) {
   @apply bg-primary-500  hover:bg-primary-600  border-primary-500 
 }
-.default{
+.default:not(.outlined){
  @apply  bg-slate-500 hover:bg-slate-600  border-slate-500 
 }
-.secondary {
+.secondary:not(.outlined) {
   @apply bg-secondary-500 hover:bg-secondary-600 border-secondary-500
 }
 
-.info {
+.info:not(.outlined){
   @apply bg-blue-500 hover:bg-blue-600 border-blue-500
 }
-.warning {
+.warning:not(.outlined) {
   @apply bg-amber-500 hover:bg-amber-600 border-amber-500
 }
-.error {
+.error:not(.outlined) {
   @apply bg-red-500 hover:bg-red-600 border-red-500
 }
-.success {
+.success:not(.outlined) {
   @apply bg-green-500 hover:bg-green-600 border-green-500
 }
 
 
 /**** outlined ****/
 .outlined {
-  @apply border-2 bg-transparent hover:bg-transparent
+  @apply border-2 !bg-transparent hover:bg-transparent
 }
 .primary.outlined {
   @apply border-primary-500   !text-primary-500 hover:!border-primary-600 hover:!text-primary-600 dark:text-primary-400
@@ -169,7 +169,7 @@ margin-bottom:40px;
 /***** text *****/
 
 .text{
-  @apply bg-transparent border border-transparent hover:border hover:bg-transparent !shadow-none
+  @apply !bg-transparent border !border-transparent hover:border hover:bg-transparent !shadow-none
 }
 .text.primary {
   @apply !text-primary-500 hover:text-primary-600 hover:border-primary-100 
